<resources>
    <string name="app_name">android Session one task</string>
    <string name="sinapore">Singapore</string>
    <string name="camera">Camera</string>
    <string name="setting">Setting\n</string>
    <string name="text">Singapore (/ˈsɪŋ(ɡ)əpɔːr/ (listen)), officially the Republic of Singapore, is an island country and city-state in maritime Southeast Asia. It is located about one degree of latitude (137 kilometres or 85 miles) north of the equator, off the southern tip of the Malay Peninsula, bordering the Strait of Malacca to the west, the Singapore Strait to the south, the South China Sea to the east, and the Straits of Johor to the north. The country\'s territory comprises one main island, 63 satellite islands and islets, and one outlying islet; the combined area of these has increased by 25% since the country\'s independence as a result of extensive land reclamation projects. It has the third highest population density in the world, although there are numerous green and recreational spaces as a result of urban planning. With a multicultural population and in recognition of the cultural identities of the major ethnic groups within the nation, Singapore has four official languages – English, Malay, Mandarin, and Tamil. English is the lingua franca, with its exclusive use in numerous public services. Multi-racialism is enshrined in the constitution and continues to shape national policies in education, housing, and politics.</string>
    <string name="upload">Upload</string>
    <string name="discard">Discard</string>
    <string name="star">Star</string>
</resources>